Fixing the css a bit to make it more mobile friendly

--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
 
 <form class="validate-form">
 	<div class="row">
-		<div class="col-1">
-		</div>
-		<div class="col-3">
+		<div class="col-m-4 column">
 			<span class="title">Ipsumm O))))))</span>
 		</div>
-		<div class="col">
-
+		<div class="col-m-4 column">
 			<select class="form-control" id="sel1">
 				<option data-type="deathMetal">Death</option>
 				<option data-type="doomMetal">Doom</option>
@@ -41,10 +38,8 @@
 				<option data-type="thrashMetal">Thrash</option>
 			</select>
 		</div>
-		<div class="col-1">
+		<div class="col-m-4 column">
 			<input class="form-control" id="sel2" type="number" min="1" max="10" value="1">
-		</div>
-		<div class="col">
 			<button type="button" class="generateIpsumButton" data-toggle="modal" data-target="#exampleModalLong">Generate</button>
 		</div>
 
